Implemented basic functional
ILB-111

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(pylibredwgcpp pylib.cpp)
-target_link_libraries(pylibredwgcpp PRIVATE libredwg_cpp_lib)
+target_link_libraries(pylibredwgcpp PRIVATE libredwg_cpp)
 
 
 include(GNUInstallDirs)
