--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(pylibredwgcpp pylib.cpp)
+add_subdirectory(pybind11)
+pybind11_add_module(pylibredwgcpp pylib.cpp)
 target_link_libraries(pylibredwgcpp PRIVATE libredwg_cpp)
 
 
