--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ project(libredwg-cpp LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(BUILD_PYPROJECT "Build project for pyproject" OFF)
+
 add_subdirectory(lib)
 add_subdirectory(bindings)
