--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "lib/libredwg"]
-	path = lib/libredwg
+[submodule "src/external/libredwg"]
+	path = src/external/libredwg
 	url = https://github.com/LibreDWG/libredwg.git
-[submodule "bindings/pybind11"]
-	path = bindings/pybind11
+[submodule "src/external/pybind11"]
+	path = src/external/pybind11
 	url = https://github.com/pybind/pybind11.git
 	branch = stable
