Renamed bindings to libredwg-cpp
ILB-111

--- a/src/bindings/CMakeLists.txt
+++ b/src/bindings/CMakeLists.txt
@@ -1,5 +1,5 @@
-pybind11_add_module(pylibredwgcpp pylib.cpp)
-target_link_libraries(pylibredwgcpp PRIVATE libredwg_cpp)
+pybind11_add_module(libredwg_cpp pylib.cpp)
+target_link_libraries(libredwg_cpp PRIVATE libredwg-cpp)
 
 find_program(PYBIND11_STUBGEN_EXEC pybind11-stubgen)
 
@@ -7,11 +7,11 @@ set(PYTHON_INTERFACE_FILES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../python")
 
 if(PYBIND11_STUBGEN_EXEC)
     add_custom_command(
-        TARGET pylibredwgcpp
+        TARGET libredwg_cpp
         POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E env
-        PYTHONPATH=$<TARGET_FILE_DIR:pylibredwgcpp>
-        ${PYBIND11_STUBGEN_EXEC} pylibredwgcpp --output-dir ${PYTHON_INTERFACE_FILES_DIR}
+        PYTHONPATH=$<TARGET_FILE_DIR:libredwg_cpp>
+        ${PYBIND11_STUBGEN_EXEC} libredwg_cpp --output-dir ${PYTHON_INTERFACE_FILES_DIR}
         WORKING_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
         COMMENT "Generating .pyi stub with pybind11-stubgen into source directory"
     )
@@ -23,23 +23,23 @@ endif()
 # Installation
 
 if(BUILD_PYPROJECT)
-    set_target_properties(pylibredwgcpp PROPERTIES INSTALL_RPATH "$ORIGIN/../lib/")
+    set_target_properties(libredwg_cpp PROPERTIES INSTALL_RPATH "$ORIGIN/../lib/")
 
-    install(TARGETS pylibredwgcpp DESTINATION pylibredwgcpp)
-    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/pylibredwgcpp.pyi" DESTINATION ${CMAKE_INSTALL_PREFIX}/pylibredwgcpp)
-    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/__init__.py" DESTINATION ${CMAKE_INSTALL_PREFIX}/pylibredwgcpp)
+    install(TARGETS libredwg_cpp DESTINATION libredwg_cpp)
+    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/libredwg_cpp.pyi" DESTINATION ${CMAKE_INSTALL_PREFIX}/libredwg_cpp)
+    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/__init__.py" DESTINATION ${CMAKE_INSTALL_PREFIX}/libredwg_cpp)
 else()
     include(GNUInstallDirs)
     set(BINDINGS_INSTALL_PATH "${CMAKE_INSTALL_LIBDIR}/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/dist-packages")
 
-    set_target_properties(pylibredwgcpp PROPERTIES INSTALL_RPATH "$ORIGIN/../../")
+    set_target_properties(libredwg_cpp PROPERTIES INSTALL_RPATH "$ORIGIN/../../")
 
-    install(TARGETS pylibredwgcpp EXPORT pylibredwgcpp_export
+    install(TARGETS libredwg_cpp EXPORT libredwg_cpp_export
         COMPONENT libredwg_cpp
         LIBRARY DESTINATION ${BINDINGS_INSTALL_PATH}
     )
 
-    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/pylibredwgcpp.pyi"
+    install(FILES "${PYTHON_INTERFACE_FILES_DIR}/libredwg_cpp.pyi"
         COMPONENT libredwg_cpp
         DESTINATION ${BINDINGS_INSTALL_PATH}
     )
