--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["scikit-build-core", "pybind11"]
 build-backend = "scikit_build_core.build"
 
 [project]
-name = "pylibredwgcpp"
+name = "libredwg_cpp"
 dynamic = ["version"]
 
 [tool.scikit-build]
